fix errors on desktop version

--- a/index.html
+++ b/index.html
@@ -280,7 +280,15 @@
             <p>https://as-pacific.com</p>
             <img src="./assets/img/Asset 8 1.png" alt="">
         </div>
-        <div id="qr-code"><img src="./assets/img/image 31.svg" alt=""></div>
+        <div id="qr-code">
+            <div>
+                <p>
+                官方微信                
+                </p>
+                <img src="./assets/img/image 31.svg" alt="">                
+            </div>
+
+        </div>
         <div id="info">
             <p>
                 典型专题信息资源上的广告 <br>
@@ -338,7 +346,6 @@
         var point = new BMap.Point(121.465469,30.948351);
         var marker = new BMap.Marker(new BMap.Point(121.465669,30.948651));
         map.centerAndZoom(point, 19);
-        map.enableScrollWheelZoom(true);
         map.addOverlay(marker);
         </script>
 </body>
