--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div id="block">
                     <div id="text">
                         <h1>ASP 洋速平</h1>
-                        <h2>上海市奉贤区奉浦工业区奉浦大道111号7楼2285室</h2>
+                        <h2 id="special-h2">上海市奉贤区奉浦工业区奉浦大道111号7楼2285室</h2>
                         <hr>
                         <h3>邮箱</h3>
                         <h4>info@as-pacific.com</h4>
