fix errors on mobile version

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section id="header">
             <div id="title">
                 <h1>国 际 数 字 营 <br> 销 解 决 方 案</h1>
-                <h2>Asia Pacific (洋速平) 公司为您提供<br>互联网营销和咨询领域的全方位服务</h2>
+                <h2 class="special-h2">Asia Pacific (洋速平) 公司为您提供<br>互联网营销和咨询领域的全方位服务</h2>
                 <div id="subtitle">
                     <hr>
                     <h4>支付方式</h4>
@@ -250,7 +250,7 @@
                 <div id="block">
                     <div id="text">
                         <h1>ASP 洋速平</h1>
-                        <h2 id="special-h2">上海市奉贤区奉浦工业区奉浦大道111号7楼2285室</h2>
+                        <h2 class="special-h2">上海市奉贤区奉浦工业区奉浦大道111号7楼2285室</h2>
                         <hr>
                         <h3>邮箱</h3>
                         <h4>info@as-pacific.com</h4>
