--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
             </div>
         </section>
         <section id="about-us">
-                <h2>公司介绍</h2>
-                <h6>About us</h6>
+                <div id="about-us-header">
+                    <h2>公司介绍</h2>
+                    <h6>About us</h6>                    
+                </div>
                 <div id="images">
                     <div id="text">
                         <p>ASP（洋速平）是一家数字营销公司，专门从事商品和服务品牌在欧洲、俄罗斯和非洲等主要国外市场的推广。我们提供全方位的服务，使用最先进的数字工具。 ASP的专业团队为每个客户提供个性化服务，从市场分析开始，根据您的业务特色并结合推广地区的特点，从零开始组织广告活动。我们的任务不仅仅是在国外市场推广您的品牌，而是尽可能地使您的品牌本地化，以获得外国客户的最佳认可。实现您的品牌的知名度的提高、吸引消费者和增加销售额。 为了达到最佳效果，我们将创造和分析的方法与最有效的推广渠道相结合！ 我们建设网站，将其翻译为欧洲主要语言，并通过专题资源吸引有效流量。为保持您的目标受众使用SMM工具 – 撰写内容，在论坛、在博客社区和社交网络创建和维护相关主题，通过与您的团队的互动处理您 的客户的问询，并保证给予高质量</p>
