--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header>
@@ -61,8 +78,8 @@
                 </div>
                 <div id="images">
                     <div id="text">
-                        <p>ASP（洋速平）是一家数字营销公司，专门从事商品和服务品牌在欧洲、俄罗斯和非洲等主要国外市场的推广。我们提供全方位的服务，使用最先进的数字工具。 ASP的专业团队为每个客户提供个性化服务，从市场分析开始，根据您的业务特色并结合推广地区的特点，从零开始组织广告活动。我们的任务不仅仅是在国外市场推广您的品牌，而是尽可能地使您的品牌本地化，以获得外国客户的最佳认可。实现您的品牌的知名度的提高、吸引消费者和增加销售额。 为了达到最佳效果，我们将创造和分析的方法与最有效的推广渠道相结合！ 我们建设网站，将其翻译为欧洲主要语言，并通过专题资源吸引有效流量。为保持您的目标受众使用SMM工具 – 撰写内容，在论坛、在博客社区和社交网络创建和维护相关主题，通过与您的团队的互动处理您 的客户的问询，并保证给予高质量</p>
-                        <p>的服务。您打算开发国外</p><span id="head-span"></span><p>市场吗？请从ASP开始！</p>                    
+                        <p>ASP（洋速平）是一家数字营销公司，专门从事商品和服务品牌在欧洲、俄罗斯和非洲等主要国外市场的推广。我们提供全方位的服务，使用最先进的数字工具。 ASP的专业团队为每个客户提供个性化服务，从市场分析开始，根据您的业务特色并结合推广地区的特点，从零开始组织广告活动。我们的任务不仅仅是在国外市场推广您的品牌，而是尽可能地使您的品牌本地化，以获得外国客户的最佳认可。实现您的品牌的知名度的提高、吸引消费者和增加销售额。 为了达到最佳效果，我们将创造和分析的方法与最有效的推广渠道相结合！ 我们建设网站，将其翻译为欧洲主要语言，并通过专题资源吸引有效流量。为保持您的目标受众使用SMM工具 – 撰写内容，在论坛、在博客社区和社交网络创建和维护相关主题，通过与您的团队的互动处理您 的客户的问询，并保证给予高质量
+                        的服务。您打算开发国外<span id="head-span"></span>市场吗？请从ASP开始！</p>                    
                     </div>
                     <div id="people"><img src="./assets/img/Background copy 1.png" alt=""></div>
                     <div id="elipse-1" class="wow slideInUp"><img src="./assets/img/Ellipse 1.svg" alt=""></div>
