--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
     <main>
         <section id="header">
             <div id="title">
-                <h1>国 际 数 字 营 </h1>
-                <h1> 销 解 决 方 案</h1>
+                <div id="h1-align">
+                    <h1>国 际 数 字 营 销</h1>
+                    <h1>解 决 方 案</h1>                    
+                </div>
                 <h2 class="special-h2">Asia Pacific (洋速平) 公司为您提供<br>互联网营销和咨询领域的全方位服务</h2>
                 <div id="subtitle">
                     <hr>
@@ -78,8 +80,8 @@
                 </div>
                 <div id="images">
                     <div id="text">
-                        <p>ASP（洋速平）是一家数字营销公司，专门从事商品和服务品牌在欧洲、俄罗斯和非洲等主要国外市场的推广。我们提供全方位的服务，使用最先进的数字工具。 ASP的专业团队为每个客户提供个性化服务，从市场分析开始，根据您的业务特色并结合推广地区的特点，从零开始组织广告活动。我们的任务不仅仅是在国外市场推广您的品牌，而是尽可能地使您的品牌本地化，以获得外国客户的最佳认可。实现您的品牌的知名度的提高、吸引消费者和增加销售额。 为了达到最佳效果，我们将创造和分析的方法与最有效的推广渠道相结合！ 我们建设网站，将其翻译为欧洲主要语言，并通过专题资源吸引有效流量。为保持您的目标受众使用SMM工具 – 撰写内容，在论坛、在博客社区和社交网络创建和维护相关主题，通过与您的团队的互动处理您 的客户的问询，并保证给予高质量
-                        的服务。您打算开发国外<span id="head-span"></span>市场吗？请从ASP开始！</p>                    
+<!--                         <span id="head-span"></span> -->
+                        <p>ASP（洋速平一家数字营销公司，专门从事商品和品牌服务在欧洲、俄罗斯和非洲等海外市场的推广。我们为您提供全方位的服务，并使用最先进的数字化媒体通道，实现营销精准化，营销效果可量化。 ASP的专业团队为每个客户提供个性化服务，从市场分析开始，根据业务特色，结合地方特点，为您策划广告活动。我们的任务不仅仅是在海外市场推广您的品牌，而且尽可能地使您的品牌本土化，以便获得更多海外客户的认可。我们以提高品牌知名度、吸引消费者和增加销售额为目的。 为了达到最佳效果，我们将创造和分析与有效的推广渠道相结合！ 我们创建网站，并将其译为欧洲主要多国语言，通过专题资源吸引有效流量。为保持您品牌的受众目标，我们采用SMM工具 —撰写文章，在论坛、微博和社交网络媒体撰写和回答相关主题，通过与您的互动沟通，处理客户的疑难问题，并保证给予您高质量的服务。您打算开发海外市场吗？请从ASP开始！</p>                    
                     </div>
                     <div id="people"><img src="./assets/img/Background copy 1.png" alt=""></div>
                     <div id="elipse-1" class="wow slideInUp"><img src="./assets/img/Ellipse 1.svg" alt=""></div>
@@ -292,9 +294,9 @@
     </main>
     <footer>
         <div id="our-contacts">
-            <h5>备案号：<br>
+<!--             <h5>备案号：<br>
                 沪ICP备18040658号</h5>
-            <hr>
+            <hr> -->
             <h6>联系方式：</h6>
             <a>+86 13764084473</a>
             <p>info@as-pacific.com</p>
