--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div id="images">
                     <div id="text">
 <!--                         <span id="head-span"></span> -->
-                        <p>ASP（洋速平一家数字营销公司，专门从事商品和品牌服务在欧洲、俄罗斯和非洲等海外市场的推广。我们为您提供全方位的服务，并使用最先进的数字化媒体通道，实现营销精准化，营销效果可量化。 ASP的专业团队为每个客户提供个性化服务，从市场分析开始，根据业务特色，结合地方特点，为您策划广告活动。我们的任务不仅仅是在海外市场推广您的品牌，而且尽可能地使您的品牌本土化，以便获得更多海外客户的认可。我们以提高品牌知名度、吸引消费者和增加销售额为目的。 为了达到最佳效果，我们将创造和分析与有效的推广渠道相结合！ 我们创建网站，并将其译为欧洲主要多国语言，通过专题资源吸引有效流量。为保持您品牌的受众目标，我们采用SMM工具 —撰写文章，在论坛、微博和社交网络媒体撰写和回答相关主题，通过与您的互动沟通，处理客户的疑难问题，并保证给予您高质量的服务。您打算开发海外市场吗？请从ASP开始！</p>                    
+                        <p>ASP（洋速平 家数字营销公司，专门从事商品和品牌服务在欧洲、俄罗斯和非洲等海外市场的推广。我们为您提供全方位的服务，并使用最先进的数字化媒体通道，实现营销精准化，营销效果可量化。 ASP的专业团队为每个客户提供个性化服务，从市场分析开始，根据业务特色，结合地方特点，为您策划广告活动。我们的任务不仅仅是在海外市场推广您的品牌，而且尽可能地使您的品牌本土化，以便获得更多海外客户的认可。我们以提高品牌知名度、吸引消费者和增加销售额为目的。 为了达到最佳效果，我们将创造和分析与有效的推广渠道相结合！ 我们创建网站，并将其译为欧洲主要多国语言，通过专题资源吸引有效流量。为保持您品牌的受众目标，我们采用SMM工具 撰写文章，在论坛、微博和社交网络媒体撰写和回答相关主题，通过与您的互动沟通，处理客户的疑难问题，并保证给予您高质量的服务。您打算开发海外市场吗？请从ASP开始！</p>                    
                     </div>
                     <div id="people"><img src="./assets/img/Background copy 1.png" alt=""></div>
                     <div id="elipse-1" class="wow slideInUp"><img src="./assets/img/Ellipse 1.svg" alt=""></div>
